force-app/main/default/objects/Website_Product_Discount_Message__c/fields/Button__c.field-meta.xml
<CustomField>
    <fullName>Button__c</fullName>
    <label>Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>