force-app/main/default/objects/Website_Product_Discount_Message__c/fields/Button_Action__c.field-meta.xml
<CustomField>
    <fullName>Button_Action__c</fullName>
    <inlineHelpText>When selecting &quot;View File&quot; please upload the file once the record is saved.</inlineHelpText>
    <label>Button Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Redirect to another page</fullName>
            </value>
            <value>
                <fullName>Check Availability</fullName>
            </value>
            <value>
                <fullName>View File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>