force-app/main/default/objects/Website_Product_Discount_Message__c/fields/Button_Action_URL__c.field-meta.xml
<CustomField>
    <fullName>Button_Action_URL__c</fullName>
    <inlineHelpText>Only Applicable to Redirect to another page or View File</inlineHelpText>
    <label>Button Action URL</label>
    <type>Url</type>
</CustomField>