force-app/main/default/objects/Website_Product_Discount_Message__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>It holds details about the Product Discount Message related to website.</description>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>