force-app/main/default/objects/Website_Product_Discount_Message__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>RecordType.Name +&apos;-&apos;+ Product_Family__r.Name +&apos;-&apos;+ Product__r.Name + &apos;-Discount Message&apos;</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>