force-app/main/default/objects/Website_Product_Discount_Message__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Content_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>