force-app/main/default/objects/Website_Product_Discount_Message__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Family</label>
    <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
    <relationshipName>Content_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>