force-app/main/default/objects/Website_Product_Discount_Message__c/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <label>Business</label>
</RecordType>