force-app/main/default/objects/Website_Product_Discount_Message__c/recordTypes/Home.recordType-meta.xml
<RecordType>
    <fullName>Home</fullName>
    <active>true</active>
    <label>Home</label>
</RecordType>