force-app/main/default/objects/Website_Product_Discount_Message__c/recordTypes/WholeSale.recordType-meta.xml
<RecordType>
    <fullName>WholeSale</fullName>
    <active>true</active>
    <label>WholeSale</label>
</RecordType>